force-app/main/default/objects/StoreView__c/StoreView__c.object-meta.xml
<CustomObject>
    <label>Store View</label>
    <nameField>
        <label>Store View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store View</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>