force-app/main/default/objects/StoreView__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>