force-app/main/default/objects/StoreView__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Store View</relationshipLabel>
    <relationshipName>Store_View</relationshipName>
    <type>Lookup</type>
</CustomField>