force-app/main/default/objects/StoreView__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Store View</relationshipLabel>
    <relationshipName>Store_View</relationshipName>
    <type>Lookup</type>
</CustomField>