force-app/main/default/objects/StoreView__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Store View</relationshipLabel>
    <relationshipName>Store_View</relationshipName>
    <type>Lookup</type>
</CustomField>